fix unpublished tabs not showing on edit page and use sweetalerts instead of built in alerts

--- a/app/css/less/admin-page.less
+++ b/app/css/less/admin-page.less
@@ -177,6 +177,13 @@ p .lightbox {
 	border: 3%;
 }
 
+.editedEventSpeaker {
+	.new-event-speaker-table-container;
+	& p {
+		margin-left: 3%;
+	}
+}
+
 .newEventSpeaker {
 	cursor: move;
 	border: 1px solid #000;
